- adds landscape & portrait class - updates music issue behind the scene
Former-commit-id: 4c41a7f4aebcaa6a613fed0e13dc8d8c2f420ff1 [formerly 15f7db29b5eff2203312ba9fc978a15377eeea62 [formerly 07cd4ef99f9829ed492753ca99d793e2c068b27b]]
Former-commit-id: 59741480be5822e8b657386fb5eb75fe710cc003
Former-commit-id: 98babf2d2c4a5c0e0be25406a2542fe9d0a981dd

--- a/assets/stylesheets/app/page.scss
+++ b/assets/stylesheets/app/page.scss
@@ -985,3 +985,14 @@ article.page.has-product {
     left: 80px;
   }
 }
+
+
+/*
+  Landscape Styles
+*/
+
+[role="main"].landscape {
+  article.page.image-background .cover-area {
+    background-position: top;
+  }
+}
